{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 56,
  "lineage": "f72ca501-1e3c-e193-3d43-4d3a70806ec3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cac7b9dfb59c9b12",
            "domain": "vpc",
            "id": "eipalloc-0cac7b9dfb59c9b12",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-52-50-73.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.50.73",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:internet-gateway/igw-075c90ece27406ac6",
            "id": "igw-075c90ece27406ac6",
            "owner_id": "013113200357",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: Internet Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: Internet Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-0e1a5b18e423ae007"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cac7b9dfb59c9b12",
            "connectivity_type": "public",
            "id": "nat-0e1f022110721191f",
            "network_interface_id": "eni-080b9e55552d32267",
            "private_ip": "10.10.2.43",
            "public_ip": "13.52.50.73",
            "subnet_id": "subnet-039b812ffcebde650",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Publiv VPC: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Publiv VPC: Nat Gateway",
              "Team": "John, Afreen, Jawad, Usman"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.priv_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:route-table/rtb-0aa826806ce701c52",
            "id": "rtb-0aa826806ce701c52",
            "owner_id": "013113200357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e1f022110721191f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: RT Private Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: RT Private Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1a5b18e423ae007"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.priv_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:route-table/rtb-07fd387a0e0dedcad",
            "id": "rtb-07fd387a0e0dedcad",
            "owner_id": "013113200357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075c90ece27406ac6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: RT Public Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: RT Public Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1a5b18e423ae007"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a6a38ac6e36e9ca",
            "route_table_id": "rtb-0aa826806ce701c52",
            "subnet_id": "subnet-039b812ffcebde650"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.priv_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098fb0915b0931b1f",
            "route_table_id": "rtb-07fd387a0e0dedcad",
            "subnet_id": "subnet-0ca2a758fde2de933"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:subnet/subnet-039b812ffcebde650",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039b812ffcebde650",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013113200357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: Internal Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: Internal Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-0e1a5b18e423ae007"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:subnet/subnet-0ca2a758fde2de933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca2a758fde2de933",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013113200357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: Public Facing Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Public VPC: Public Facing Subnet",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "vpc_id": "vpc-0e1a5b18e423ae007"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PublicVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:013113200357:vpc/vpc-0e1a5b18e423ae007",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0aa89df3d5eb9a7ef",
            "default_route_table_id": "rtb-0ff20fc60d7f246ee",
            "default_security_group_id": "sg-00782db8c002021d8",
            "dhcp_options_id": "dopt-77184110",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e1a5b18e423ae007",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff20fc60d7f246ee",
            "owner_id": "013113200357",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-Public",
              "Team": "John, Afreen, Jawad, Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-Public",
              "Team": "John, Afreen, Jawad, Usman"
            }
          }
        }
      ]
    }
  ]
}